--- a/data/cards/65914127.yaml
+++ b/data/cards/65914127.yaml
@@ -7,8 +7,8 @@ name:
   fr: Pendentif Pendule
   it: Pendente Pendulum
   pt: Pingente Pêndulo
-  ja:
-  ja_romaji:
+  ja: ペンデュラム・ペンダント
+  ja_romaji: Pendyuramu Pendanto
   ko:
   ko_rr:
   zh-TW:
@@ -64,6 +64,10 @@ sets:
     set_name: Cyberstorm Access
     rarities:
     - Common
+  ja:
+  - set_number: WPP4-JP058
+    set_name: World Premiere Pack 2023
+    rarities:
 limit_regulation:
   tcg: Unlimited
   ocg: Not yet released
