--- a/data/cards/93125329.yaml
+++ b/data/cards/93125329.yaml
@@ -7,8 +7,8 @@ name:
   fr: Bête du Nuage Doré - Malong
   it: Bestia Nuvola Dorata - Malong
   pt: Besta da Nuvem Dourada - Malong
-  ja:
-  ja_romaji:
+  ja: <ruby>金<rt>きん</rt></ruby><ruby>雲<rt>うん</rt></ruby><ruby>獣<rt>じゅう</rt></ruby>－<ruby>馬<rt>マ</rt></ruby><ruby>龍<rt>ロン</rt></ruby>
+  ja_romaji: Kinunjū - Maron
   ko:
   ko_rr:
   zh-TW:
@@ -74,6 +74,10 @@ sets:
     set_name: Cyberstorm Access
     rarities:
     - Common
+  ja:
+  - set_number: WPP4-JP052
+    set_name: World Premiere Pack 2023
+    rarities:
 limit_regulation:
   tcg: Unlimited
   ocg: Not yet released
