--- a/data/rush/16934.yaml
+++ b/data/rush/16934.yaml
@@ -90,6 +90,10 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Common
+  - set_number: RD/KRCS-KR003
+    set_name: Rush Duel Korea Championship 2023 Card Shop Qualifiers promotional cards
+    rarities:
+    - Super Rare
 is_translation_unofficial:
   text:
     en: true
