--- a/data/rush/17723.yaml
+++ b/data/rush/17723.yaml
@@ -63,6 +63,10 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Secret Rare
+  - set_number: RD/KRCS-KR002
+    set_name: Rush Duel Korea Championship 2023 Card Shop Qualifiers promotional cards
+    rarities:
+    - Ultra Parallel Rare
 is_translation_unofficial:
   text:
     en: true
