--- a/rush.yaml
+++ b/rush.yaml
@@ -47269,6 +47269,10 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Common
+  - set_number: RD/KRCS-KR003
+    set_name: Rush Duel Korea Championship 2023 Card Shop Qualifiers promotional cards
+    rarities:
+    - Super Rare
 is_translation_unofficial:
   text:
     en: true
@@ -71842,6 +71846,10 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Secret Rare
+  - set_number: RD/KRCS-KR002
+    set_name: Rush Duel Korea Championship 2023 Card Shop Qualifiers promotional cards
+    rarities:
+    - Ultra Parallel Rare
 is_translation_unofficial:
   text:
     en: true
