--- a/data/cards/38033121.yaml
+++ b/data/cards/38033121.yaml
@@ -772,6 +772,10 @@ sets:
     set_name: Yu-Gi-Oh! World Championship 2023 attendance cards
     rarities:
     - Quarter Century Secret Rare
+  - set_number: WPP4-JP066
+    set_name: World Premiere Pack 2023
+    rarities:
+    - Quarter Century Secret Rare
   ko:
   - set_number: MFC-KR000
     set_name: Magician's Force
