--- a/data/rush/yugipedia1016829.yaml
+++ b/data/rush/yugipedia1016829.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -34,7 +35,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードの攻撃力は、［自分の墓地の魔法カードの数］×１００アップする。自分の墓地に魔法カードが５枚以上ある場合、さらにこのカードの攻撃力は５００アップする。
   ko:
   zh-TW:
   zh-CN:
