--- a/rush.yaml
+++ b/rush.yaml
@@ -117814,7 +117814,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -117828,7 +117829,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードの攻撃力は、［自分の墓地の魔法カードの数］×１００アップする。自分の墓地に魔法カードが５枚以上ある場合、さらにこのカードの攻撃力は５００アップする。
   ko:
   zh-TW:
   zh-CN:
