--- a/data/cards/37057012.yaml
+++ b/data/cards/37057012.yaml
@@ -8,7 +8,7 @@ name:
   it: Cyber Orco 2
   pt:
   ja: サイバー・オーガ・２
-  ja_romaji: Saibā Ōga Tsu
+  ja_romaji: Saibā Ōga Tsū
   ko: 사이버 오우거 2
   ko_rr:
   zh-TW:
