--- a/data/cards/43500484.yaml
+++ b/data/cards/43500484.yaml
@@ -39,6 +39,8 @@ attribute: EARTH
 level: 3
 atk: 1200
 def: 900
+series:
+- Makai
 images:
 - index: 1
   image: DarkworldThorns-LOB-EN-C-UE-25thAnniversaryEdition.png
