--- a/data/cards/65892585.yaml
+++ b/data/cards/65892585.yaml
@@ -8,7 +8,7 @@ name:
   it: Orgoglio d'Oro - Carro Carrie
   pt: Orgulho Dourado - Carrie Carruagem
   ja: <ruby>ＧＰ<rt>ゴールド・プライド</rt></ruby>－チャリオット・キャリー<ruby>号<rt>ごう</rt></ruby>
-  ja_romaji: Gōrudo Puraido - Chariotto Kyarī-Gō
+  ja_romaji: Gōrudo Puraido - Chariotto Kyarī-gō
   ko:
   ko_rr:
   zh-TW:
