--- a/data/cards/69455834.yaml
+++ b/data/cards/69455834.yaml
@@ -41,6 +41,7 @@ atk: 2000
 def: 1530
 series:
 - PaniK's monsters
+- Makai
 images:
 - index: 1
   image: KingofYamimakai-MRD-EN-C-UE-25thAnniversaryEdition.png
