--- a/data/cards/75559356.yaml
+++ b/data/cards/75559356.yaml
@@ -49,6 +49,8 @@ attribute: DARK
 level: 4
 atk: 1400
 def: 1200
+series:
+- Makai
 images:
 - index: 1
   image: CyberSoldierofDarkworld-TP1-NA-C-UE.jpg
