--- a/data/cards/66736715.yaml
+++ b/data/cards/66736715.yaml
@@ -8,7 +8,7 @@ name:
   it: Cavaliere Moissa, il Generale Cometa
   pt: Cavaleiro Moissa, o General Cometa
   ja: <ruby>彗<rt>すい</rt></ruby><ruby>聖<rt>せい</rt></ruby>の<ruby>将<rt>しょう</rt></ruby>－ワンモア・ザ・ナイト
-  ja_romaji: Suisei no Shō - Wanmoa za Naito
+  ja_romaji: Suisei no Shō - Wanmoa Za Naito
   ko:
   ko_rr:
   zh-TW:
