--- a/data/cards/09091064.yaml
+++ b/data/cards/09091064.yaml
@@ -18,7 +18,7 @@ text:
     If you reveal a card(s) in the hand to activate a "Vanquish Soul" card's effect (except during the Damage Step): You can Special Summon this card from your hand. (Quick Effect): You can activate 1 of these effects, by revealing monster(s) in your hand with the listed Attribute(s);
     ● FIRE: Change the battle position of 1 monster on the field.
     ● FIRE & FIRE: Add 1 "Vanquish Soul" card from your Deck to your hand, except "Vanquish Soul Jiaolong".
-    You can only use each effect of "Vanquish Soul Jiaolong once per turn, and cannot activate more than 1 in the same Chain.
+    You can only use each effect of "Vanquish Soul Jiaolong" once per turn, and cannot activate more than 1 in the same Chain.
   de:
   es:
   fr:
