--- a/rush.yaml
+++ b/rush.yaml
@@ -117883,7 +117883,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手がモンスターを表側攻撃表示で召喚・特殊召喚した時、相手フィールドにモンスターが２体以上いる場合に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -117895,7 +117896,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドの攻撃表示モンスター（レベル８以下）を２体まで選んで表側守備表示にする。
   ko:
   zh-TW:
   zh-CN:
