--- a/data/cards/33904024.yaml
+++ b/data/cards/33904024.yaml
@@ -8,7 +8,7 @@ name:
   it: Scheggia dell'Avidità
   pt: Fragmento de Ganância
   ja: <ruby>強<rt>ごう</rt></ruby><ruby>欲<rt>よく</rt></ruby>なカケラ
-  ja_romaji: Gōyoku-na Kakera
+  ja_romaji: Gōyoku na Kakera
   ko: 욕망의 조각
   ko_rr:
   zh-TW:
