--- a/data/rush/18580.yaml
+++ b/data/rush/18580.yaml
@@ -49,6 +49,10 @@ sets:
     set_name: Rush Duel Promotion Pack 2023
     rarities:
     - Normal Parallel Rare
+  - set_number: RD/SD0A-JP033
+    set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
+    rarities:
+    - Common
 is_translation_unofficial:
   text:
     en: true
