--- a/data/rush/18695.yaml
+++ b/data/rush/18695.yaml
@@ -41,6 +41,10 @@ sets:
     set_name: Legend Awakening Pack
     rarities:
     - Rare
+  - set_number: RD/SD0A-JP009
+    set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
+    rarities:
+    - Common
   ko:
   - set_number: RD/LGP1-KR017
     set_name: Legend Awakening Pack
