--- a/data/rush/16720.yaml
+++ b/data/rush/16720.yaml
@@ -51,6 +51,10 @@ sets:
     set_name: 'Deck Mod Pack: Fierce Thunder Storm!!'
     rarities:
     - Ultra Rare
+  - set_number: RD/SD0A-JP036
+    set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP06-KR064
     set_name: 'Deck Mod Pack: Fierce Thunder Storm!!'
