--- a/data/rush/17721.yaml
+++ b/data/rush/17721.yaml
@@ -57,7 +57,7 @@ sets:
     - Common
     - Super Rare
     - Ultra Rare
-  - set_number: RD/MRP2-JP032
+  - set_number: RD/SD0A-JP032
     set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
     rarities:
     - Common
