--- a/data/rush/18593.yaml
+++ b/data/rush/18593.yaml
@@ -55,6 +55,10 @@ sets:
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
     rarities:
     - Common
+  - set_number: RD/SD0A-JP025
+    set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP12-KR011
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
