--- a/data/cards/17266660.yaml
+++ b/data/cards/17266660.yaml
@@ -209,7 +209,7 @@ sets:
     rarities:
     - Rare
 limit_regulation:
-  tcg: Semi-Limited
+  tcg: Unlimited
   ocg: Limited
 yugipedia_page_id: 46075
 master_duel_rarity: R
