--- a/data/cards/33854624.yaml
+++ b/data/cards/33854624.yaml
@@ -106,7 +106,7 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Limited
   ocg: Limited
 yugipedia_page_id: 714198
 master_duel_rarity: UR
