--- a/data/cards/48626373.yaml
+++ b/data/cards/48626373.yaml
@@ -120,6 +120,6 @@ sets:
     - Secret Rare
     - Prismatic Secret Rare
 limit_regulation:
-  tcg: Limited
+  tcg: Forbidden
   ocg: Unlimited
 yugipedia_page_id: 715509
