--- a/data/cards/99266988.yaml
+++ b/data/cards/99266988.yaml
@@ -129,7 +129,7 @@ sets:
     - Secret Rare
     - Prismatic Secret Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Limited
   ocg: Unlimited
 yugipedia_page_id: 177828
 master_duel_rarity: SR
