--- a/rush.yaml
+++ b/rush.yaml
@@ -71838,6 +71838,7 @@ legend: true
 images:
 - index: 1
   image: RecurringNightmare-RDMRP1-JP-ScR.png
+  illustration: RecurringNightmare-G002-JP-VG-artwork.png
 - index: '1.1'
   image: RecurringNightmare-RDS23P-JP-OP.png
 sets:
