--- a/data/rush/15442.yaml
+++ b/data/rush/15442.yaml
@@ -63,6 +63,10 @@ sets:
     set_name: 'Deck Mod Pack: Shocking Lightning Attack!!'
     rarities:
     - Rare
+  - set_number: RD/B233-JP009
+    set_name: Battle Pack 2023 Vol.3
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP02-KR032
     set_name: 'Deck Mod Pack: Shocking Lightning Attack!!'
