--- a/data/rush/16143.yaml
+++ b/data/rush/16143.yaml
@@ -73,6 +73,10 @@ sets:
     set_name: Strongest Battle Deck Gavin - Demon Commander Three Legions
     rarities:
     - Common
+  - set_number: RD/MRP2-JP045
+    set_name: Megaroad Pack 2
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP04-KR020
     set_name: 'Deck Mod Pack: Destined Power Destruction!!'
