--- a/data/rush/16762.yaml
+++ b/data/rush/16762.yaml
@@ -48,7 +48,7 @@ sets:
     rarities:
     - Common
   ko:
-  - set_number: GRP1-KRP02
+  - set_number: RD/GRP1-KRP02
     set_name: Grand Rush Pack Plus Bonus Pack
     rarities:
     - Normal Parallel Rare
