--- a/data/rush/16783.yaml
+++ b/data/rush/16783.yaml
@@ -61,6 +61,11 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Common
+  - set_number: RD/B233-JP005
+    set_name: Battle Pack 2023 Vol.3
+    rarities:
+    - Common
+    - Super Rare
   ko:
   - set_number: RD/SBD4-KR003
     set_name: Strongest Battle Deck Romin - Psychic Beat
