--- a/data/rush/16951.yaml
+++ b/data/rush/16951.yaml
@@ -57,8 +57,12 @@ sets:
     set_name: Saikyō Jump November 2021 promotional card
     rarities:
     - Normal Parallel Rare
+  - set_number: RD/B233-JP010
+    set_name: Battle Pack 2023 Vol.3
+    rarities:
+    - Common
   ko:
-  - set_number: GRP1-KRP04
+  - set_number: RD/GRP1-KRP04
     set_name: Grand Rush Pack Plus Bonus Pack
     rarities:
     - Normal Parallel Rare
