--- a/data/rush/18364.yaml
+++ b/data/rush/18364.yaml
@@ -57,6 +57,11 @@ sets:
     set_name: Over Rush Pack
     rarities:
     - Common
+  - set_number: RD/B233-JP004
+    set_name: Battle Pack 2023 Vol.3
+    rarities:
+    - Common
+    - Super Rare
   ko:
   - set_number: RD/ORP1-KR035
     set_name: Over Rush Pack
