--- a/data/rush/18950.yaml
+++ b/data/rush/18950.yaml
@@ -72,6 +72,11 @@ sets:
     set_name: Oblivion of the Flash
     rarities:
     - Common
+  - set_number: RD/B233-JP003
+    set_name: Battle Pack 2023 Vol.3
+    rarities:
+    - Common
+    - Super Rare
   ko:
   - set_number: RD/KP13-KR021
     set_name: Oblivion of the Flash
