--- a/data/rush/16763.yaml
+++ b/data/rush/16763.yaml
@@ -62,7 +62,7 @@ sets:
     rarities:
     - Common
   ko:
-  - set_number: GRP1-KRP03
+  - set_number: RD/GRP1-KRP03
     set_name: Grand Rush Pack Plus Bonus Pack
     rarities:
     - Normal Parallel Rare
