--- a/rush.yaml
+++ b/rush.yaml
@@ -8699,6 +8699,10 @@ sets:
     set_name: 'Deck Mod Pack: Shocking Lightning Attack!!'
     rarities:
     - Rare
+  - set_number: RD/B233-JP009
+    set_name: Battle Pack 2023 Vol.3
+    rarities:
+    - Common
   ko:
   - set_number: RD/KP02-KR032
     set_name: 'Deck Mod Pack: Shocking Lightning Attack!!'
@@ -23998,6 +24002,10 @@ sets:
     - Secret Rare
   - set_number: RD/SBD3-JP003
     set_name: Strongest Battle Deck Gavin - Demon Commander Three Legions
+    rarities:
+    - Common
+  - set_number: RD/MRP2-JP045
+    set_name: Megaroad Pack 2
     rarities:
     - Common
   ko:
@@ -40938,7 +40946,7 @@ sets:
     rarities:
     - Common
   ko:
-  - set_number: GRP1-KRP02
+  - set_number: RD/GRP1-KRP02
     set_name: Grand Rush Pack Plus Bonus Pack
     rarities:
     - Normal Parallel Rare
@@ -41017,7 +41025,7 @@ sets:
     rarities:
     - Common
   ko:
-  - set_number: GRP1-KRP03
+  - set_number: RD/GRP1-KRP03
     set_name: Grand Rush Pack Plus Bonus Pack
     rarities:
     - Normal Parallel Rare
@@ -42390,6 +42398,11 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Common
+  - set_number: RD/B233-JP005
+    set_name: Battle Pack 2023 Vol.3
+    rarities:
+    - Common
+    - Super Rare
   ko:
   - set_number: RD/SBD4-KR003
     set_name: Strongest Battle Deck Romin - Psychic Beat
@@ -43528,7 +43541,7 @@ sets:
     rarities:
     - Normal Parallel Rare
   ko:
-  - set_number: GRP1-KRP01
+  - set_number: RD/GRP1-KRP01
     set_name: Grand Rush Pack Plus Bonus Pack
     rarities:
     - Normal Parallel Rare
@@ -47396,8 +47409,12 @@ sets:
     set_name: Saikyō Jump November 2021 promotional card
     rarities:
     - Normal Parallel Rare
+  - set_number: RD/B233-JP010
+    set_name: Battle Pack 2023 Vol.3
+    rarities:
+    - Common
   ko:
-  - set_number: GRP1-KRP04
+  - set_number: RD/GRP1-KRP04
     set_name: Grand Rush Pack Plus Bonus Pack
     rarities:
     - Normal Parallel Rare
@@ -55403,7 +55420,7 @@ sets:
     rarities:
     - Normal Parallel Rare
   ko:
-  - set_number: GRP1-KRP05
+  - set_number: RD/GRP1-KRP05
     set_name: Grand Rush Pack Plus Bonus Pack
     rarities:
     - Normal Parallel Rare
@@ -88262,6 +88279,11 @@ sets:
     set_name: Over Rush Pack
     rarities:
     - Common
+  - set_number: RD/B233-JP004
+    set_name: Battle Pack 2023 Vol.3
+    rarities:
+    - Common
+    - Super Rare
   ko:
   - set_number: RD/ORP1-KR035
     set_name: Over Rush Pack
@@ -93039,6 +93061,11 @@ sets:
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
     rarities:
     - Rare
+  - set_number: RD/B233-JP002
+    set_name: Battle Pack 2023 Vol.3
+    rarities:
+    - Common
+    - Super Rare
   ko:
   - set_number: RD/KP12-KR020
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
@@ -96888,6 +96915,12 @@ sets:
     set_name: Legend Awakening Pack
     rarities:
     - Over Rush Rare
+  - set_number: RD/B233-JP001
+    set_name: Battle Pack 2023 Vol.3
+    rarities:
+    - Common
+    - Super Rare
+    - Ultra Rare
   ko:
   - set_number: RD/LGP1-KR000
     set_name: Legend Awakening Pack
@@ -103921,6 +103954,11 @@ sets:
     set_name: Oblivion of the Flash
     rarities:
     - Common
+  - set_number: RD/B233-JP003
+    set_name: Battle Pack 2023 Vol.3
+    rarities:
+    - Common
+    - Super Rare
   ko:
   - set_number: RD/KP13-KR021
     set_name: Oblivion of the Flash
