--- a/rush.yaml
+++ b/rush.yaml
@@ -117980,6 +117980,150 @@ yugipedia_page_id: 1017132
 ---
 konami_id:
 name:
+  en: Royal Rebel's Beginitar
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ロイヤルデモンズ・ビギター
+  ja_romaji: Roiyaru Demonzu Bigitā
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    A guitar fiend that works hard every day to get everyone to hear its songs.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fiend / Normal
+attribute: LIGHT
+level: 1
+atk: 100
+def: 0
+series:
+- Royal Rebel's
+images:
+- index: 1
+  image: RoyalRebelsBeginitar-RDB233-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/B233-JP006
+    set_name: Battle Pack 2023 Vol.3
+    rarities:
+    - Common
+is_translation_unofficial:
+  text:
+    en: true
+yugipedia_page_id: 1017931
+---
+konami_id:
+name:
+  en: Royal Rebel's Babybass
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ロイヤルデモンズ・ベビース
+  ja_romaji: Roiyaru Demonzu Bebīsu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    A bass fiend that coolly supports Beginitar and Kidrum.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fiend / Normal
+attribute: LIGHT
+level: 1
+atk: 200
+def: 0
+series:
+- Royal Rebel's
+images:
+- index: 1
+  image: RoyalRebelsBabybass-RDB233-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/B233-JP007
+    set_name: Battle Pack 2023 Vol.3
+    rarities:
+    - Common
+is_translation_unofficial:
+  text:
+    en: true
+yugipedia_page_id: 1017932
+---
+konami_id:
+name:
+  en: Royal Rebel's Kidrum
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ロイヤルデモンズ・キッドラム
+  ja_romaji: Roiyaru Demonzu Kiddoramu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    A drum fiend that started a band because it admired the greater Royal Rebels.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fiend / Normal
+attribute: LIGHT
+level: 1
+atk: 300
+def: 0
+series:
+- Royal Rebel's
+images:
+- index: 1
+  image: RoyalRebelsKidrum-RDB233-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/B233-JP008
+    set_name: Battle Pack 2023 Vol.3
+    rarities:
+    - Common
+is_translation_unofficial:
+  text:
+    en: true
+yugipedia_page_id: 1017933
+---
+konami_id:
+name:
   en: Time Wizard
   de:
   es:
