--- a/rush.yaml
+++ b/rush.yaml
@@ -118424,7 +118424,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分たちの曲を皆に聴いてもらおうと日々努力している、ギターの悪魔。
   ko:
   zh-TW:
   zh-CN:
@@ -118472,7 +118473,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    ビギターやキッドラムをクールに支えている、ベースの悪魔。
   ko:
   zh-TW:
   zh-CN:
@@ -118520,7 +118522,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    上級ロイヤルデモンズに憧れてバンドを始めた、ドラムの悪魔。
   ko:
   zh-TW:
   zh-CN:
