--- a/data/cards/73216412.yaml
+++ b/data/cards/73216412.yaml
@@ -4,7 +4,7 @@ name:
   en: Worm Drake
   de: Drachenwurm
   es: Dragón Gusano
-  fr: Ver Drakonien
+  fr: Ver - Drakonien
   it: Drago-Verme
   pt: Dragonete-Lombriga
   ja: ワームドレイク
