--- a/data/rush/17868.yaml
+++ b/data/rush/17868.yaml
@@ -51,6 +51,7 @@ series:
 images:
 - index: 1
   image: ChemicalizeSalamander-RDKP10-JP-UR.png
+  illustration: ChemicalizeSalamander-G002-JP-VG-artwork.png
 - index: 2
   image: ChemicalizeSalamander-RD711B-JP-NPR.png
 sets:
