--- a/data/cards/31812496.yaml
+++ b/data/cards/31812496.yaml
@@ -21,7 +21,7 @@ text:
   es: |-
     Cualquier daño de batalla que tu adversario reciba cuando ataque a este monstruo es doblado.
   fr: |-
-    Tous les dommages de combat que votre adversaire reçoit lorsqu'il attaque ce monstre sont doublés.
+    Doublez les dommages de combats reçus par votre adversaire lorsqu’il attaque ce monstre.
   it: |-
     Ogni danno da combattimento che il tuo avversario riceve quando lui attacca questo mostro, viene raddoppiato.
   pt: |-
