--- a/data/rush/yugipedia1004631.yaml
+++ b/data/rush/yugipedia1004631.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター１体をデッキに戻して発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（闇属性）を３体まで選ぶ。［選んだモンスターのレベルの合計］×１００ダメージを相手に与え、このカードの攻撃力はターン終了時まで、［選んだモンスターのレベルの合計］×１００アップする。その後、選んだモンスターをデッキに戻す。
   ko:
   zh-TW:
   zh-CN:
@@ -50,7 +52,8 @@ materials:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「真紅動の撃速竜」＋「ダークネス・ドレイク」
   ko:
   zh-TW:
   zh-CN:
