--- a/data/rush/15164.yaml
+++ b/data/rush/15164.yaml
@@ -139,4 +139,9 @@ sets:
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
     rarities:
     - Over Rush Rare
+  - set_number: RD/EPP1-KR049
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Super Rare
 yugipedia_page_id: 715960
