--- a/data/rush/15582.yaml
+++ b/data/rush/15582.yaml
@@ -64,4 +64,9 @@ sets:
     set_name: Rush Duel Launch Commemorative Pack
     rarities:
     - Super Rare
+  - set_number: RD/EPP1-KR037
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 yugipedia_page_id: 714189
