--- a/data/rush/16370.yaml
+++ b/data/rush/16370.yaml
@@ -70,4 +70,9 @@ sets:
     set_name: Event Pack 2021 EX Vol.1
     rarities:
     - Secret Rare
+  - set_number: RD/EPP1-KR046
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Super Rare
 yugipedia_page_id: 717299
