--- a/data/rush/16615.yaml
+++ b/data/rush/16615.yaml
@@ -60,6 +60,11 @@ sets:
     set_name: Maximum Ultra Evolution Pack
     rarities:
     - Super Rare
+  - set_number: RD/EPP1-KR031
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
