--- a/data/rush/16800.yaml
+++ b/data/rush/16800.yaml
@@ -67,6 +67,11 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: RD/EPP1-KR047
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Super Rare
 is_translation_unofficial:
   name:
     en: true
