--- a/data/rush/17346.yaml
+++ b/data/rush/17346.yaml
@@ -59,6 +59,12 @@ sets:
     set_name: Battle Pack 2023 Vol.2
     rarities:
     - Common
+  ko:
+  - set_number: RD/EPP1-KR008
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
