--- a/data/rush/17561.yaml
+++ b/data/rush/17561.yaml
@@ -63,6 +63,11 @@ sets:
     set_name: Go Rush Deck Bonus Cards
     rarities:
     - Normal Parallel Rare
+  - set_number: RD/EPP1-KR035
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   text:
     en: true
