--- a/data/rush/17617.yaml
+++ b/data/rush/17617.yaml
@@ -53,6 +53,12 @@ sets:
     set_name: Saikyō Jump June 2022 promotional card
     rarities:
     - Normal Parallel Rare
+  ko:
+  - set_number: RD/EPP1-KR010
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
