--- a/data/rush/17682.yaml
+++ b/data/rush/17682.yaml
@@ -60,6 +60,11 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Ultra Rare
+  - set_number: RD/EPP1-KR039
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Super Rare
 is_translation_unofficial:
   name:
     en: true
