--- a/data/rush/17722.yaml
+++ b/data/rush/17722.yaml
@@ -56,6 +56,11 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Ultra Rare
+  - set_number: RD/EPP1-KR027
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
