--- a/data/rush/17873.yaml
+++ b/data/rush/17873.yaml
@@ -51,6 +51,7 @@ series:
 images:
 - index: 1
   image: VoidvelgrRequiem-RDS224-JP-ScR.png
+  illustration: VoidvelgrRequiem-G002-JP-VG-artwork.png
 - index: 2
   image: VoidvelgrRequiem-RD711B-JP-NPR.png
 sets:
@@ -78,6 +79,11 @@ sets:
     set_name: Strongest Battle Deck Promotion Pack
     rarities:
     - Secret Rare
+  - set_number: RD/EPP1-KR050
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Super Rare
 is_translation_unofficial:
   name:
     en: true
