--- a/data/rush/17884.yaml
+++ b/data/rush/17884.yaml
@@ -60,6 +60,11 @@ sets:
     set_name: 'Deck Mod Pack: Requiem of Destruction!!'
     rarities:
     - Super Rare
+  - set_number: RD/EPP1-KR029
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
