--- a/data/rush/18679.yaml
+++ b/data/rush/18679.yaml
@@ -56,9 +56,11 @@ sets:
     rarities:
     - Ultra Rare
   ko:
-  - set_number: RD/EPP1-KR???
+  - set_number: RD/EPP1-KR022
     set_name: Express Pack
     rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
