--- a/data/rush/yugipedia1018410.yaml
+++ b/data/rush/yugipedia1018410.yaml
@@ -20,19 +20,21 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    デッキの上からカード２枚を墓地へ送り、自分フィールドの表側表示のこのカードを墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 "Blue Tooth Burst Dragon" or "Red Boot Boost Dragon" from your hand to your field in face-up Defense Position. Then, you can add 1 "Dragon's Boost Fusion" or "Dragon's Burst Fusion" from your Graveyard to your hand.
+    Special Summon 1 "Blue Tooth Burst Dragon" or "Red Boot Boost Dragon" from your hand to your field in face-up Defense Position. Then, you can add 1 "Dragon's Burst Fusion" or "Dragon's Boost Fusion" from your Graveyard to your hand.
   de:
   es:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    手札の「碧牙の爆速竜」または「真紅動の撃速竜」１体を自分フィールドに表側守備表示で特殊召喚する。その後、自分の墓地の「ドラゴンズ・バースト・フュージョン」または「ドラゴンズ・ブースト・フュージョン」１枚を選んで手札に加える事ができる。
   ko:
   zh-TW:
   zh-CN:
