--- a/data/rush/16305.yaml
+++ b/data/rush/16305.yaml
@@ -62,6 +62,11 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: RD/EPP1-KR041
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Super Rare
 is_translation_unofficial:
   text:
     en: true
