--- a/data/rush/17240.yaml
+++ b/data/rush/17240.yaml
@@ -72,6 +72,12 @@ sets:
     set_name: Victory Pack Maximal Multistrike Dragon
     rarities:
     - Secret Rare
+  ko:
+  - set_number: RD/EPP1-KR005
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
