--- a/data/rush/17274.yaml
+++ b/data/rush/17274.yaml
@@ -60,6 +60,11 @@ sets:
     set_name: Grand Rush Pack Plus Bonus Pack
     rarities:
     - Normal Parallel Rare
+  - set_number: RD/EPP1-KR007
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
