--- a/data/rush/17287.yaml
+++ b/data/rush/17287.yaml
@@ -62,6 +62,11 @@ sets:
     set_name: 'Deck Mod Pack: Genesis Master Road!!'
     rarities:
     - Super Rare
+  - set_number: RD/EPP1-KR036
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
