--- a/data/rush/17485.yaml
+++ b/data/rush/17485.yaml
@@ -53,6 +53,12 @@ sets:
     set_name: Yu-Gi-Oh! Rush Duel LP Volume 1 promotional card
     rarities:
     - Ultra Rare
+  ko:
+  - set_number: RD/EPP1-KR011
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
