--- a/data/rush/17539.yaml
+++ b/data/rush/17539.yaml
@@ -56,6 +56,11 @@ sets:
     set_name: 'Deck Mod Pack: Galaxy of Fate!!'
     rarities:
     - Super Rare
+  - set_number: RD/EPP1-KR023
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
