--- a/data/rush/17718.yaml
+++ b/data/rush/17718.yaml
@@ -66,6 +66,11 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Super Rare
+  - set_number: RD/EPP1-KR033
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
