--- a/data/rush/17848.yaml
+++ b/data/rush/17848.yaml
@@ -63,6 +63,11 @@ sets:
     rarities:
     - Secret Rare
     - Rush Rare
+  - set_number: RD/EPP1-KR044
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Super Rare
 is_translation_unofficial:
   text:
     en: true
