--- a/data/rush/17912.yaml
+++ b/data/rush/17912.yaml
@@ -56,6 +56,11 @@ sets:
     set_name: 'Deck Mod Pack: Requiem of Destruction!!'
     rarities:
     - Super Rare
+  - set_number: RD/EPP1-KR025
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   text:
     en: true
