--- a/data/rush/17932.yaml
+++ b/data/rush/17932.yaml
@@ -62,6 +62,11 @@ sets:
     set_name: Strongest Battle Deck Yudias - Shining Velgariva
     rarities:
     - Common
+  - set_number: RD/EPP1-KR024
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
