--- a/data/rush/18574.yaml
+++ b/data/rush/18574.yaml
@@ -55,6 +55,12 @@ sets:
     set_name: Saikyō Jump February 2023 promotional card
     rarities:
     - Normal Parallel Rare
+  ko:
+  - set_number: RD/EPP1-KR017
+    set_name: Express Pack
+    rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
