--- a/data/rush/18892.yaml
+++ b/data/rush/18892.yaml
@@ -54,9 +54,11 @@ sets:
     rarities:
     - Normal Parallel Rare
   ko:
-  - set_number: RD/EPP1-KR???
+  - set_number: RD/EPP1-KR020
     set_name: Express Pack
     rarities:
+    - Common
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
