--- a/data/rush/yugipedia1018415.yaml
+++ b/data/rush/yugipedia1018415.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    手札のモンスター（ドラゴン族）１体を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドの攻撃表示モンスター１体を選んで裏側守備表示にする。自分フィールドの表側表示モンスターがモンスター（ドラゴン族）のみの場合、さらに自分の墓地の「フラップ・ドラゴン」１体を選んで自分フィールドに表側守備表示で特殊召喚できる。
   ko:
   zh-TW:
   zh-CN:
