--- a/data/rush/yugipedia1018417.yaml
+++ b/data/rush/yugipedia1018417.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    手札１枚をデッキの下に戻して発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（レベル１／光属性・闇属性／ドラゴン族）１体を選んで手札に加える。その後、自分の墓地の「ドラゴンズ・バースト・フュージョン」または「ドラゴンズ・ブースト・フュージョン」１枚を選んで手札に加える事ができる。
   ko:
   zh-TW:
   zh-CN:
