--- a/data/rush/yugipedia1018419.yaml
+++ b/data/rush/yugipedia1018419.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手ターンに相手がドローした時、または相手ターンに相手がモンスターを召喚・特殊召喚した時、自分フィールドのモンスター１体を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このターン、相手は１回しか攻撃宣言できない。さらに、相手フィールドの元々の攻撃力が３０００の表側表示のフュージョンモンスター（レベル９以上／魔導騎士族）１体を選んでそのコントロールを得る事ができる。
   ko:
   zh-TW:
   zh-CN:
